# zingo-mobile

components/Transactions/components/: TxDetail.tsx
rust/android/: Dockerfile  build.sh
rust/android/buildphases/: constructdockerimages.sh
rust/lib/: Cargo.toml
