[package]
name = "rustlib"
version = "1.0.1"
authors = ["Aditya Kulkarni <aditya@zecwallet.co>", "Zingolabs <zingo@zingolabs.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.10.2", default-features = false }
zecwalletlitelib = { git="https://github.com/zingolabs/zecwalletlitelib", default-features=false, rev="fa32933a8114b0bb0de753e2c33f6b48da9bca11"}
lazy_static = "1.4.0"
android_logger = "0.8.6"
log = "0.4.8"
base64 = "0.11.0"
